// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTeam Renders & Matches snapshot 1`] = `
<div>
  <form
    class="flex px-5 pt-20 sm:px-10"
  >
    <div
      class="flex flex-col w-full max-w-4xl mx-auto p-8 bg-white rounded-lg shadow sm:p-14 sm:pb-8"
    >
      <svg
        class="mx-auto"
        fill="none"
        height="56"
        viewBox="0 0 56 56"
        width="56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#00AADD"
          height="48"
          rx="24"
          width="48"
          x="4"
          y="4"
        />
        <path
          clip-rule="evenodd"
          d="M28 26C26.9391 26 25.9217 25.5786 25.1716 24.8284C24.4214 24.0783 24 23.0609 24 22C24 20.9391 24.4214 19.9217 25.1716 19.1716C25.9217 18.4214 26.9391 18 28 18C29.0609 18 30.0783 18.4214 30.8284 19.1716C31.5786 19.9217 32 20.9391 32 22C32 23.0609 31.5786 24.0783 30.8284 24.8284C30.0783 25.5786 29.0609 26 28 26ZM22 36C20.9391 36 19.9217 35.5786 19.1716 34.8284C18.4214 34.0783 18 33.0609 18 32C18 30.9391 18.4214 29.9217 19.1716 29.1716C19.9217 28.4214 20.9391 28 22 28C23.0609 28 24.0783 28.4214 24.8284 29.1716C25.5786 29.9217 26 30.9391 26 32C26 33.0609 25.5786 34.0783 24.8284 34.8284C24.0783 35.5786 23.0609 36 22 36V36ZM34 36C32.9391 36 31.9217 35.5786 31.1716 34.8284C30.4214 34.0783 30 33.0609 30 32C30 30.9391 30.4214 29.9217 31.1716 29.1716C31.9217 28.4214 32.9391 28 34 28C35.0609 28 36.0783 28.4214 36.8284 29.1716C37.5786 29.9217 38 30.9391 38 32C38 33.0609 37.5786 34.0783 36.8284 34.8284C36.0783 35.5786 35.0609 36 34 36Z"
          fill-rule="evenodd"
          stroke="white"
          stroke-width="2"
        />
        <rect
          height="48"
          rx="24"
          stroke="#CDEFF9"
          stroke-width="8"
          width="48"
          x="4"
          y="4"
        />
      </svg>
      <div
        class="max-w-sm mx-auto mb-8 justify-center text-center"
      >
        <h2
          class="mt-4 text-2xl text-gray-900"
        >
          Add Team
        </h2>
        <p
          class="mt-2 mb-4 text-sm text-gray-500"
        >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
ornare tortor in nisl fermentum.
        </p>
        <a
          class="text-blue-tl text-sm"
          href="#"
        >
          Where can I find this info?
        </a>
      </div>
      <div
        class="flex flex-col py-6 space-y-6 sm:space-y-0 sm:space-x-12 sm:flex-row"
      >
        <div
          class="flex flex-col space-y-6 sm:flex-1"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="account_id"
            >
              Account ID
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="account_id"
                name="account_id"
                type="text"
                value=""
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="public_key"
            >
              Public Key
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="public_key"
                name="public_key"
                type="text"
                value=""
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="private_key"
            >
              Private Key
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="private_key"
                name="private_key"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col space-y-6 sm:flex-1"
        >
          <div
            class=""
          >
            <label
              class="block text-sm font-medium text-gray-700"
              for="approved_roles"
            >
              What Roles Provide Support?
            </label>
            <div
              class="mt-2"
            >
              <div
                class="multiselect-container multiSelectContainer "
                id="approved_roles"
              >
                <div
                  class="search-wrapper searchWrapper "
                >
                  <input
                    autocomplete="off"
                    class="searchBox"
                    id="approved_roles_input"
                    placeholder="Select"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="optionListContainer displayNone"
                >
                  <ul
                    class="optionContainer"
                  >
                    <li
                      class="
              highlightOption highlight 
              false 
              false option
            "
                    >
                      Administrator
                    </li>
                    <li
                      class="
               
              false 
              false option
            "
                    >
                      Editor
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <label
              class="block text-sm font-medium text-gray-700"
              for="helpdesk"
            >
              Help Desk
            </label>
            <div
              class="mt-2"
            >
              <select
                class="bg-white block w-full pl-3 pr-8 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="helpdesk"
                name="helpdesk"
              >
                <option>
                  Select a Help Desk
                </option>
                <option
                  selected=""
                  value="helpscout"
                >
                  Help Scout
                </option>
                <option
                  value="zendesk"
                >
                  Zendesk
                </option>
              </select>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pt-8 mt-4 border-t"
      >
        <div
          class="flex justify-end"
        >
          <button
            class="bg-white py-2 px-4 border border-gray-300 rounded-lg text-sm font-medium text-gray-900 hover:bg-gray-50 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500"
            type="submit"
          >
            Cancel
          </button>
          <button
            class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-lg text-white bg-blue-tl hover:bg-indigo-700 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500"
            type="submit"
          >
            Add Team
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`EditTeam Renders & Matches snapshot 1`] = `
<div>
  <form
    class="flex px-5 pt-20 sm:px-10"
  >
    <div
      class="flex flex-col w-full max-w-4xl mx-auto p-8 bg-white rounded-lg shadow sm:p-14 sm:pb-8"
    >
      <svg
        class="mx-auto"
        fill="none"
        height="56"
        viewBox="0 0 56 56"
        width="56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#00AADD"
          height="48"
          rx="24"
          width="48"
          x="4"
          y="4"
        />
        <path
          clip-rule="evenodd"
          d="M28 26C26.9391 26 25.9217 25.5786 25.1716 24.8284C24.4214 24.0783 24 23.0609 24 22C24 20.9391 24.4214 19.9217 25.1716 19.1716C25.9217 18.4214 26.9391 18 28 18C29.0609 18 30.0783 18.4214 30.8284 19.1716C31.5786 19.9217 32 20.9391 32 22C32 23.0609 31.5786 24.0783 30.8284 24.8284C30.0783 25.5786 29.0609 26 28 26ZM22 36C20.9391 36 19.9217 35.5786 19.1716 34.8284C18.4214 34.0783 18 33.0609 18 32C18 30.9391 18.4214 29.9217 19.1716 29.1716C19.9217 28.4214 20.9391 28 22 28C23.0609 28 24.0783 28.4214 24.8284 29.1716C25.5786 29.9217 26 30.9391 26 32C26 33.0609 25.5786 34.0783 24.8284 34.8284C24.0783 35.5786 23.0609 36 22 36V36ZM34 36C32.9391 36 31.9217 35.5786 31.1716 34.8284C30.4214 34.0783 30 33.0609 30 32C30 30.9391 30.4214 29.9217 31.1716 29.1716C31.9217 28.4214 32.9391 28 34 28C35.0609 28 36.0783 28.4214 36.8284 29.1716C37.5786 29.9217 38 30.9391 38 32C38 33.0609 37.5786 34.0783 36.8284 34.8284C36.0783 35.5786 35.0609 36 34 36Z"
          fill-rule="evenodd"
          stroke="white"
          stroke-width="2"
        />
        <rect
          height="48"
          rx="24"
          stroke="#CDEFF9"
          stroke-width="8"
          width="48"
          x="4"
          y="4"
        />
      </svg>
      <div
        class="max-w-sm mx-auto mb-8 justify-center text-center"
      >
        <h2
          class="mt-4 text-2xl text-gray-900"
        >
          Update Team
        </h2>
        <p
          class="mt-2 mb-4 text-sm text-gray-500"
        >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
ornare tortor in nisl fermentum.
        </p>
        <a
          class="text-blue-tl text-sm"
          href="#"
        >
          Where can I find this info?
        </a>
      </div>
      <div
        class="flex flex-col py-6 space-y-6 sm:space-y-0 sm:space-x-12 sm:flex-row"
      >
        <div
          class="flex flex-col space-y-6 sm:flex-1"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="account_id"
            >
              Account ID
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="account_id"
                name="account_id"
                type="text"
                value="1"
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="public_key"
            >
              Public Key
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="public_key"
                name="public_key"
                type="text"
                value="fsaffff"
              />
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700"
              for="private_key"
            >
              Private Key
            </label>
            <div
              class="mt-2 relative rounded-lg"
            >
              <input
                class="block w-full pl-4 pr-10 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="private_key"
                name="private_key"
                type="text"
                value="asda"
              />
            </div>
          </div>
        </div>
        <div
          class="flex flex-col space-y-6 sm:flex-1"
        >
          <div
            class=""
          >
            <label
              class="block text-sm font-medium text-gray-700"
              for="approved_roles"
            >
              What Roles Provide Support?
            </label>
            <div
              class="mt-2"
            >
              <div
                class="multiselect-container multiSelectContainer "
                id="approved_roles"
              >
                <div
                  class="search-wrapper searchWrapper "
                >
                  <input
                    autocomplete="off"
                    class="searchBox"
                    id="approved_roles_input"
                    placeholder="Select"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="optionListContainer displayNone"
                >
                  <ul
                    class="optionContainer"
                  >
                    <li
                      class="
              highlightOption highlight 
              false 
              false option
            "
                    >
                      Administrator
                    </li>
                    <li
                      class="
               
              false 
              false option
            "
                    >
                      Editor
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <label
              class="block text-sm font-medium text-gray-700"
              for="helpdesk"
            >
              Help Desk
            </label>
            <div
              class="mt-2"
            >
              <select
                class="bg-white block w-full pl-3 pr-8 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
                id="helpdesk"
                name="helpdesk"
              >
                <option>
                  Select a Help Desk
                </option>
                <option
                  selected=""
                  value="helpscout"
                >
                  Help Scout
                </option>
                <option
                  value="zendesk"
                >
                  Zendesk
                </option>
              </select>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pt-8 mt-4 border-t"
      >
        <div
          class="flex justify-end"
        >
          <button
            class="bg-white py-2 px-4 border border-gray-300 rounded-lg text-sm font-medium text-gray-900 hover:bg-gray-50 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500"
            type="submit"
          >
            Cancel
          </button>
          <button
            class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-lg text-white bg-blue-tl hover:bg-indigo-700 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500"
            type="submit"
          >
            Update Team
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`HelpDeskSelect Renders & Matches snapshot 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="block text-sm font-medium text-gray-700"
      for="helpdesk"
    >
      Help Desk
    </label>
    <div
      class="mt-2"
    >
      <select
        class="bg-white block w-full pl-3 pr-8 py-2.5 sm:text-sm border border-gray-300 rounded-lg focus:outline-none focus:border-sky-500 focus:ring-1 ring-offset-2 focus:ring-sky-500"
        id="helpdesk"
        name="helpdesk"
      >
        <option>
          Select a Help Desk
        </option>
        <option
          selected=""
          value="helpscout"
        >
          Help Scout
        </option>
        <option
          value="zendesk"
        >
          Zendesk
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`NoTeams Renders & Matches snapshot 1`] = `
<div>
  <div
    class="flex px-5 pt-12 sm:px-10 sm:pt-32"
  >
    <div
      class="flex flex-col justify-center text-center w-full max-w-lg mx-auto p-8 bg-white rounded-lg shadow sm:p-14"
    >
      <svg
        class="mx-auto"
        fill="none"
        height="56"
        viewBox="0 0 56 56"
        width="56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#00AADD"
          height="48"
          rx="24"
          width="48"
          x="4"
          y="4"
        />
        <path
          clip-rule="evenodd"
          d="M28 26C26.9391 26 25.9217 25.5786 25.1716 24.8284C24.4214 24.0783 24 23.0609 24 22C24 20.9391 24.4214 19.9217 25.1716 19.1716C25.9217 18.4214 26.9391 18 28 18C29.0609 18 30.0783 18.4214 30.8284 19.1716C31.5786 19.9217 32 20.9391 32 22C32 23.0609 31.5786 24.0783 30.8284 24.8284C30.0783 25.5786 29.0609 26 28 26ZM22 36C20.9391 36 19.9217 35.5786 19.1716 34.8284C18.4214 34.0783 18 33.0609 18 32C18 30.9391 18.4214 29.9217 19.1716 29.1716C19.9217 28.4214 20.9391 28 22 28C23.0609 28 24.0783 28.4214 24.8284 29.1716C25.5786 29.9217 26 30.9391 26 32C26 33.0609 25.5786 34.0783 24.8284 34.8284C24.0783 35.5786 23.0609 36 22 36V36ZM34 36C32.9391 36 31.9217 35.5786 31.1716 34.8284C30.4214 34.0783 30 33.0609 30 32C30 30.9391 30.4214 29.9217 31.1716 29.1716C31.9217 28.4214 32.9391 28 34 28C35.0609 28 36.0783 28.4214 36.8284 29.1716C37.5786 29.9217 38 30.9391 38 32C38 33.0609 37.5786 34.0783 36.8284 34.8284C36.0783 35.5786 35.0609 36 34 36Z"
          fill-rule="evenodd"
          stroke="white"
          stroke-width="2"
        />
        <rect
          height="48"
          rx="24"
          stroke="#CDEFF9"
          stroke-width="8"
          width="48"
          x="4"
          y="4"
        />
      </svg>
      <h2
        class="mt-4 text-2xl text-gray-900"
      >
        Create your first team
      </h2>
      <button
        class="inline-flex items-center justify-center px-4 py-2 border border-transparent shadow-sm font-medium rounded-lg text-white bg-blue-tl focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500 sm:text-sm"
        type="button"
      >
        <svg
          class="mr-1"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
          >
            <path
              d="M12 6v6m0 0v6m0-6h6m-6 0H6"
              stroke="#FFFFFF"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </g>
        </svg>
        Add Team
      </button>
    </div>
  </div>
</div>
`;

exports[`TeamsList Renders & Matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col px-5 py-6 sm:px-10"
  >
    <div
      class="pb-6 mb-6 border-b md:flex md:items-center md:justify-between md:space-x-5"
    >
      <div
        class="flex items-center space-x-5"
      >
        <div>
          <h2
            class="text-2xl text-gray-900"
          >
            Teams
          </h2>
          <p
            class="mt-1 text-sm text-gray-500"
          >
            Manage your TrustedLogin settings
          </p>
        </div>
      </div>
      <div
        class="mt-6 flex flex-col-reverse justify-stretch space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-x-reverse sm:space-y-0 sm:space-x-3 md:mt-0 md:flex-row md:space-x-3"
      >
        <div>
          <label
            class="sr-only"
            for="search"
          >
            Search
          </label>
          <div
            class="relative h-full"
          >
            <div
              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <input
              class="block w-full h-full pl-10 pr-3 py-3 border border-gray-300 rounded-lg leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500 sm:text-sm sm:py-2"
              id="search"
              name="search"
              placeholder="Search..."
              type="search"
            />
          </div>
        </div>
        <button
          class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-lg text-white bg-blue-tl hover:bg-indigo-700 focus:outline-none focus:ring-2 ring-offset-2 focus:ring-sky-500"
          type="submit"
        >
          <svg
            class="mr-1"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
            >
              <path
                d="M12 6v6m0 0v6m0-6h6m-6 0H6"
                stroke="#FFFFFF"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </g>
          </svg>
          Add Team
        </button>
      </div>
    </div>
    <div
      class="flex flex-col justify-center w-full bg-white rounded-lg shadow"
    >
      <ul
        class="divide-y divide-gray-200 px-5 sm:px-8"
        role="list"
      >
        <li
          class="py-5 flex flex-col items-center justify-between sm:py-8 sm:flex-row"
        >
          <div
            class="flex w-full items-center space-x-5 sm:w-auto"
          >
            <button
              class="flex-shrink-0 flex items-center justify-center h-12 w-12 bg-purple-600 text-white text-sm font-medium rounded-lg"
            >
              TN
            </button>
            <div
              class="flex flex-row space-x-16 items-center w-full justify-between sm:justify-start"
            >
              <div
                class="flex flex-col max-w-[10rem] sm:max-w-[8rem] md:max-w-none"
              >
                <p
                  class="text-lg font-medium text-gray-900 leading-tight min-w-[6rem]"
                  id="team-option-1-label"
                >
                  1
                </p>
                <p
                  class="text-sm text-gray-500"
                  id="team-option-1-description"
                >
                  1
                </p>
              </div>
              <div
                class="flex items-center justify-self-end"
              >
                <p
                  class="text-sm mr-4 sm:w-18"
                >
                  148 
                  <span
                    class="text-gray-500"
                  >
                    logins
                  </span>
                </p>
                <div
                  class="inline-flex items-center px-2.5 py-1 rounded-full text-xs font-medium bg-green-100 text-green-600"
                >
                  <svg
                    aria-hidden="true"
                    class="-ml-1 mr-0.5 flex-shrink-0 self-center h-4 w-4 text-green-600"
                    fill="currentColor"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Increased by
                  </span>
                  5%
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center space-x-5 w-full mt-4 justify-between sm:w-auto sm:mt-0"
          >
            <div
              class="flex items-center space-x-6"
            >
              <button
                class="text-sm text-blue-tl hover:text-navy-tl p-2"
              >
                Edit
              </button>
              <button
                class="text-sm text-red-500 hover:text-red-800 p-2"
              >
                Delete
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
